# EDInputParser

./: .gitignore  LICENSE  README.md  inputParser.py  main.py  pyproject.toml  requirements.txt
configs/: config.yaml
src/: __init__.py  ediProcessing.py  paramikoFunctions.py
